Workaround search results background overflow when dragged out of bounds and make sure it's usable when JS fails

--- a/app/assets/stylesheets/component/_sliding-drawer.scss
+++ b/app/assets/stylesheets/component/_sliding-drawer.scss
@@ -29,16 +29,9 @@
 
 .SlidingDrawer-toggle {
   display: none;
-  margin-bottom: base-margin("bottom", "small");
-  padding: $base-padding-small;
-  border-bottom: 1px solid $palette-gray-20;
 
   .is-draggable & {
     display: block;
-  }
-
-  .is-active & {
-    background: $palette-gray-05;
   }
 
 }
